ecmascript/parser/tests/test262-error-references/fail/2b050de45ab44c8c.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/2b050de45ab44c8c.js:1:10
  |
1 | for (var x = 1 of y);
  |          ^

